--- a/frontend/pip-boy-36/src/App.css
+++ b/frontend/pip-boy-36/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  overflow: hidden;
+  position: relative;
 }
 
 .App-logo {
@@ -9,19 +11,22 @@
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    animation: App-logo-spin infinite 20s linear, imgShadow 1.6s infinite;
   }
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #0b280a;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: start;
   font-size: calc(10px + 2vmin);
   color: white;
+  box-shadow: inset 10px 10px 100px 50px #090706;
+  overflow: hidden;
+  position: relative;
 }
 
 .App-link {
@@ -188,6 +193,94 @@
       -2.6208764473832513px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
   }
 }
+
+@keyframes imgShadow {
+  0% {
+    filter: drop-shadow(0.4389924193300864px 0 1px rgba(0, 30, 255, 0.5))
+      drop-shadow(-0.4389924193300864px 0 1px rgba(255, 0, 80, 0.3));
+  }
+  5% {
+    filter: drop-shadow(2.7928974010788217px 0 1px rgba(0, 30, 255, 0.5))
+      drop-shadow(-2.7928974010788217px 0 1px rgba(255, 0, 80, 0.3));
+  }
+  10% {
+    filter: drop-shadow(0.02956275843481219px 0 1px rgba(0, 30, 255, 0.5))
+      drop-shadow(-0.02956275843481219px 0 1px rgba(255, 0, 80, 0.3));
+  }
+  15% {
+    filter: drop-shadow(0.40218538552878136px 0 1px rgba(0, 30, 255, 0.5))
+      drop-shadow(-0.40218538552878136px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px);
+  }
+  20% {
+    filter: drop-shadow(3.4794037899852017px 0 1px rgba(0, 30, 255, 0.5))
+      drop-shadow(-3.4794037899852017px 0 1px rgba(255, 0, 80, 0.3));
+  }
+  25% {
+    filter: drop-shadow(1.6125630401149584px 0 1px rgba(0, 30, 255, 0.5))
+      drop-shadow(-1.6125630401149584px 0 1px rgba(255, 0, 80, 0.3));
+  }
+  30% {
+    filter: drop-shadow(0.7015590085143956px 0 1px rgba(0, 30, 255, 0.5))
+      drop-shadow(-0.7015590085143956px 0 1px rgba(255, 0, 80, 0.3));
+  }
+  35% {
+    filter: drop-shadow(3.896914047650351px 0 1px rgba(0, 30, 255, 0.5))
+      drop-shadow(-3.896914047650351px 0 1px rgba(255, 0, 80, 0.3));
+  }
+  40% {
+    filter: drop-shadow(3.870905614848819px 0 1px rgba(0, 30, 255, 0.5))
+      drop-shadow(-3.870905614848819px 0 1px rgba(255, 0, 80, 0.3));
+  }
+  45% {
+    filter: drop-shadow(2.231056963361899px 0 1px rgba(0, 30, 255, 0.5))
+      drop-shadow(-2.231056963361899px 0 1px rgba(255, 0, 80, 0.3));
+  }
+  50% {
+    filter: drop-shadow(0.08084290417898504px 0 1px rgba(0, 30, 255, 0.5))
+      drop-shadow(-0.08084290417898504px 0 1px rgba(255, 0, 80, 0.3));
+  }
+  55% {
+    filter: drop-shadow(2.3758461067427543px 0 1px rgba(0, 30, 255, 0.5))
+      drop-shadow(-2.3758461067427543px 0 1px rgba(255, 0, 80, 0.3));
+  }
+  60% {
+    filter: drop-shadow(2.202193051050636px 0 1px rgba(0, 30, 255, 0.5))
+      drop-shadow(-2.202193051050636px 0 1px rgba(255, 0, 80, 0.3));
+  }
+  65% {
+    filter: drop-shadow(2.8638780614874975px 0 1px rgba(0, 30, 255, 0.5))
+      drop-shadow(-2.8638780614874975px 0 1px rgba(255, 0, 80, 0.3));
+  }
+  70% {
+    filter: drop-shadow(0.48874025155497314px 0 1px rgba(0, 30, 255, 0.5))
+      drop-shadow(-0.48874025155497314px 0 1px rgba(255, 0, 80, 0.3));
+  }
+  75% {
+    filter: drop-shadow(1.8948491305757957px 0 1px rgba(0, 30, 255, 0.5))
+      drop-shadow(-1.8948491305757957px 0 1px rgba(255, 0, 80, 0.3));
+  }
+  80% {
+    filter: drop-shadow(0.0833037308038857px 0 1px rgba(0, 30, 255, 0.5))
+      drop-shadow(-0.0833037308038857px 0 1px rgba(255, 0, 80, 0.3));
+  }
+  85% {
+    filter: drop-shadow(0.09769827255241735px 0 1px rgba(0, 30, 255, 0.5))
+      drop-shadow(-0.09769827255241735px 0 1px rgba(255, 0, 80, 0.3));
+  }
+  90% {
+    filter: drop-shadow(3.443339761481782px 0 1px rgba(0, 30, 255, 0.5))
+      drop-shadow(-3.443339761481782px 0 1px rgba(255, 0, 80, 0.3));
+  }
+  95% {
+    filter: drop-shadow(2.1841838852799786px 0 1px rgba(0, 30, 255, 0.5))
+      drop-shadow(-2.1841838852799786px 0 1px rgba(255, 0, 80, 0.3));
+  }
+  100% {
+    filter: drop-shadow(2.6208764473832513px 0 1px rgba(0, 30, 255, 0.5))
+      drop-shadow(-2.6208764473832513px 0 1px rgba(255, 0, 80, 0.3));
+  }
+}
+
 .crt::after {
   content: " ";
   display: block;
