Finished adding player inventory and quest routes

--- a/frontend/pip-boy-36/src/App.scss
+++ b/frontend/pip-boy-36/src/App.scss
@@ -95,6 +95,14 @@ nav > ul {
 }
 
 //-----------------------------------------------------------
+// Login Styles
+//-----------------------------------------------------------
+
+.login-container {
+  z-index: 1000;
+}
+
+//-----------------------------------------------------------
 // Navbar Styles
 //-----------------------------------------------------------
 
