--- a/frontend/pip-boy-36/src/App.scss
+++ b/frontend/pip-boy-36/src/App.scss
@@ -26,6 +26,7 @@ button {
   border: transparent;
   padding: 0px;
   z-index: 1000;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 button:hover {
@@ -100,6 +101,10 @@ nav > ul {
 
 .login-container {
   z-index: 1000;
+}
+
+.logout span {
+  white-space: preserve-spaces;
 }
 
 //-----------------------------------------------------------
