Finished adding design for menus for adding/editing item to database and adding them to players

--- a/frontend/pip-boy-36/src/App.scss
+++ b/frontend/pip-boy-36/src/App.scss
@@ -336,7 +336,22 @@ nav > ul {
 }
 
 .selected {
+  position: relative;
   color: yellow;
+  .remove-icon {
+    visibility: visible;
+
+    &:hover {
+      color: white;
+      cursor: pointer;
+    }
+  }
+}
+
+.remove-icon {
+  visibility: hidden;
+  position: absolute;
+  right: 0;
 }
 
 .list-container {
