Updated All frontend files with better react practices.
Removed useEffect hook in most cases taht didn't invlove syncing external sources. Added some comments to better explain placement and functionality

--- a/frontend/pip-boy-36/src/App.scss
+++ b/frontend/pip-boy-36/src/App.scss
@@ -395,10 +395,16 @@ input[type="text"] {
 }
 
 .list {
+  padding: unset;
   height: 400px;
   overflow: scroll;
   position: relative;
-  //z-index: 101;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 .list-item {
@@ -442,6 +448,15 @@ input[type="text"] {
 
 .description p {
   font-size: 20px;
+}
+
+//-----------------------------------------------------------
+// Quest Styles
+//-----------------------------------------------------------
+
+.quest-status {
+  float: right;
+  width: 56%;
 }
 
 //-----------------------------------------------------------
