--- a/frontend/pip-boy-36/src/App.css
+++ b/frontend/pip-boy-36/src/App.css
@@ -281,7 +281,9 @@
   }
 }
 
-.crt::after {
+.crt::after,
+button::after,
+input[type="submit"]::after {
   content: " ";
   display: block;
   position: absolute;
@@ -295,7 +297,9 @@
   pointer-events: none;
   animation: flicker 0.15s infinite;
 }
-.crt::before {
+.crt::before,
+button::before,
+input[type="submit"]::before {
   content: " ";
   display: block;
   position: absolute;
@@ -314,6 +318,8 @@
   background-size: 100% 2px, 3px 100%;
   pointer-events: none;
 }
-.crt {
+.crt,
+button,
+input[type="submit"] {
   animation: textShadow 1.6s infinite;
 }
