Finished chnaging files from javascript to typescript

--- a/frontend/pip-boy-36/src/App.scss
+++ b/frontend/pip-boy-36/src/App.scss
@@ -454,8 +454,9 @@ input[type="text"] {
 // Quest Styles
 //-----------------------------------------------------------
 
-.quest-status {
-  float: right;
+.under-description {
+  position: absolute;
+  right: 0;
   width: 56%;
 }
 
