--- a/frontend/pip-boy-36/src/App.scss
+++ b/frontend/pip-boy-36/src/App.scss
@@ -318,9 +318,14 @@ input[type="text"] {
   width: 200px;
   color: $lineGreen;
 
+  .hp-fields {
+    position: relative;
+    text-align: right;
+  }
+
   .hp {
     input {
-      width: 25%;
+      width: 35%;
       font-size: 25px;
     }
 
@@ -335,6 +340,13 @@ input[type="text"] {
     &.hp-label:hover {
       color: white;
       cursor: pointer;
+    }
+
+    .hp-buttons {
+      position: absolute;
+      bottom: -35px;
+      left: 0;
+      right: 0;
     }
   }
 }
